--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "my-react-app",
   "version": "0.1.0",
-  "private": true,
-  "homepage": "https://preeti-14-7.github.io",
+  "private": false,
+  "homepage": "https://preeti-14-7.github.io/my-react-app/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
